--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
             <div class="page-header">
                 <h1 class="page-title page-fadein">Sven Gehring</h1>
+                <h4 class="page-idoit page-fadein">Lead Software Engineer
+                    <a href="http://kochag.ch">René Koch AG</a>
+                </h4>
                 <h4 class="page-idoit page-fadein">Ex-Core Developer
                     <a href="https://github.com/hummingbird-me/hummingbird">Kitsu Media inc</a>
-                </h4>
-                <h4 class="page-idoit page-fadein">Software Engineer
-                    <a href="http://kochag.ch">René Koch AG</a>
                 </h4>
                 <h2 class="page-links page-fadein">
                     <!--<a href="mailto:svengehring@cybrox.eu"><i>&#xe806;</i></a>-->
