Trade sloth-php for club website in project list

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
                     <span class="page-row-desc">Small information and news website for Ram World Record</span>
                 </span>
                 <span class="page-row-item">
+                    <a href="http://segelbrand.ch">segelbrand.ch</a>
+                    <span class="page-row-desc">Official website of the Segelbrand e.V</span>
+                </span>
+                <span class="page-row-item">
                     <a href="https://github.com/cybrox/Hummingboard">Hummingboard</a>
                     <span class="page-row-desc">A bunch of additional tools for Hummingbird users</span>
                 </span>
                 <span class="page-row-item">
                     <a href="https://github.com/cybrox/crunchDB">crunchDB</a>
                     <span class="page-row-desc">A small, experimental JSON database written in PHP</span>
-                </span>
-                <span class="page-row-item">
-                    <a href="https://github.com/cybrox/sloth-php">SlothPHP</a>
-                    <span class="page-row-desc">A hacky approach on a simplified MVC Framework</span>
                 </span>
                 <span class="page-row-item">
                     <a href="https://github.com/cybrox/wroomba">Wroomba!</a>
