Update iconset with new icons

--- a/index.html
+++ b/index.html
@@ -48,14 +48,15 @@
                     <a href="https://github.com/hummingbird-me/hummingbird">Kitsu Media inc</a>
                 </h4>
                 <h2 class="page-links page-fadein">
-                    <a href="mailto:cbrxde@gmail.com"><i>&#xe806;</i></a>
-                    <a href="https://twitter.com/cybroxde"><i>&#xe805;</i></a>
+                    <a href="mailto:cbrxde@gmail.com"><i>&#xe800;</i></a>
+                    <a href="https://twitter.com/cybroxde"><i>&#xf099;</i></a>
                     <a href="http://blog.cybrox.eu">BLOG</a>
-                    <a href="https://github.com/cybrox"><i>&#xe802;</i></a>
-                    <a href="http://codepen.io/cybrox/"><i>&#xe803;</i></a>
+                    <a href="https://github.com/cybrox"><i>&#xf113;</i></a>
+                    <a href="http://codepen.io/cybrox/"><i>&#xf32c;</i></a>
+                    <a href="http://linkedin.io/cybrox/"><i>&#xf32c;</i></a>
                 </h2>
                 <h2 class="page-down page-fadein">
-                    <a class="page-down-click"><i>&#xe807;</i></a>
+                    <a class="page-down-click"><i>&#xe802;</i></a>
                 </h2>
             </div>
 
