--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
                 </h4>
                 <h2 class="page-links page-fadein">
                     <a href="mailto:cbrxde@gmail.com"><i>&#xe800;</i></a>
-                    <a href="https://twitter.com/cybroxde"><i>&#xf099;</i></a>
+                    <a href="http://linkedin.com/in/sven-gehring"><i>&#xf0e1;</i></a>
+                    <a href="https://keybase.io/cybrox"><i>&#xe804;</i></a>
                     <a href="http://blog.cybrox.eu">BLOG</a>
+                    <a href="https://twitter.com/cybroxde"><i>&#xf099;</i></a>
                     <a href="https://github.com/cybrox"><i>&#xf113;</i></a>
                     <a href="http://codepen.io/cybrox/"><i>&#xf32c;</i></a>
-                    <a href="http://linkedin.io/cybrox/"><i>&#xf32c;</i></a>
                 </h2>
                 <h2 class="page-down page-fadein">
                     <a class="page-down-click"><i>&#xe802;</i></a>
