Add link to more projects instead of jokes

--- a/index.html
+++ b/index.html
@@ -76,15 +76,22 @@
                 <br />
                 <span class="page-row-item">
                     Dog Person
-                    <span class="page-row-desc">Well; I like cats too but eh</span>
+                    <span class="page-row-desc">
+                        Well; I like cats too but eh
+                    </span>
                 </span>
                 <span class="page-row-item">
                     Certified Tinkerer
-                    <span class="page-row-desc">Knowledge is power; why not build quadcopters with it?</span>
+                    <span class="page-row-desc">
+                        Knowledge is power; why not build quadcopters with it?
+                    </span>
                 </span>
                 <span class="page-row-item">
-                    Brit; Humor-wise
-                    <span class="page-row-desc">Everything may be joked about; just not in every situation.</span>
+                    Side project maniac
+                    <span class="page-row-desc">
+                        Check out all the things I start - and sometimes even finish - 
+                        <a href="/projects.html">here!</a>
+                    </span>
                 </span>
             </div>
             <div class="page-row">
