Adjust main page class to avoid being footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="page-footer">
+    <div class="page-details">
         <div class="page-split">
             <div class="page-row">
                 <h2 class="page-row-title"><span class="page-i">I</span> am a<span class="page-is">(n)</span></h2>
