Update page meta information

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="language" content="en" />
     <meta name="author" content="cybrox" />
     <meta name="copyright" content="2013 - 2018 cybrox" />
-    <meta name="description" content="Sven Marc 'cybrox' Gehring, creative swiss pixelshifter" />
-    <meta name="keywords" content="Sven, Marc, Gehring, cybrox, hummingbird, developer, rene, koch, ag, electronics, engineer"/>
+    <meta name="description" content="Sven Marc 'cybrox' Gehring, certified swiss electronics technician, self-taught and battle tested software engineer and open source enthusiast" />
+    <meta name="keywords" content="Sven, Marc, Gehring, cybrox, cbrx, hummingbird, kitsu, developer, rene, koch, ag, electronics, engineer, elixir"/>
 
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
