Capitalize projects link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     Side project maniac
                     <span class="page-row-desc">
                         Check out all the things I start - and sometimes even finish - 
-                        <a href="/projects.html">here!</a>
+                        <a href="/projects.html">HERE!</a>
                     </span>
                 </span>
             </div>
