Add better wording on projects page

--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
                         Although the page title indicates that this is a list of side projects,
                         it in fact is a list of all of my notable projects, including the picks
                         presented on the home page. I attempted to hint towards this by making
-                        the term "side" less present in the title but given that I am terrible
+                        the term "side" less dominant in the title but given that I am terrible
                         at designing intuitive visual clues, you probably missed that.
                     </span>
                     <br />
