Fix some entries in project list, add initial

--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
                         </span>
                     </span>
                     <span class="page-row-item">
-                        <span class="item-year">2016 &bull;</span> RAM World Record
+                        <span class="item-year">2016 &bull;</span> ramworldrecord.com
                         <span class="page-row-desc desc-spaced">
                             ...
                         </span>
@@ -97,7 +97,7 @@
                         </span>
                     </span>
                     <span class="page-row-item">
-                        <span class="item-year">2014 &bull;</span> GCode Renderer <i>"Liquid"</i>
+                        <span class="item-year">2014 &bull;</span> GCode Renderer "Liquid"
                         <span class="page-row-desc desc-spaced">
                             ...
                         </span>
@@ -130,6 +130,12 @@
                         <span class="item-year">2013 &bull;</span> Simple TicTacToe
                         <span class="page-row-desc desc-spaced">
                             ...
+                        </span>
+                    </span>
+                    <span class="page-row-item">
+                        <span class="item-year">2009 &bull;</span> Hello World!
+                        <span class="page-row-desc desc-spaced">
+                            Everyone's gotta start somewhere, eh?
                         </span>
                     </span>
                 </div>
