Fix slothphp link and 0zythum title

--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
                             <span class="tag tag-nok">defunct</span>
                             <span class="link"><a href="https://github.com/cybrox/zythum"><i>&#xf113;</i></a></span>
                             <span class="link"><a href="https://mods.factorio.com/mods/cybrox/zythum"><i>&#xe805;</i></a></span>
-                            A Factorio mod meant to clean up the horrible mess created by custom modpacks.<br />
+                            Factorio mod to clean up the mess created by custom modpacks.<br />
                             Using pretty solid shell- and ingame hook based tooling, this mod collected item and building information
                             from all mods in order to create templates for sorting them in proper categories. Ultimately, while the
                             mod did find some success, the effort of sorting the ever-growing modbase and the comparably low adaption
@@ -141,7 +141,7 @@
                         <span class="item-year">2015 &bull;</span> SlothPHP
                         <span class="page-row-desc desc-spaced">
                             <span class="tag tag-nok">defunct</span>
-                            <span class="link"><a href="https://github.com/cybrox/slothphp"><i>&#xf113;</i></a></span>
+                            <span class="link"><a href="https://github.com/cybrox/sloth-php"><i>&#xf113;</i></a></span>
                             A very pragmatic MVC-ish PHP framework. <br />
                             Not being satisfied with the state of PHP MVC frameworks at the time, I decided to write my own, very pragmatic
                             framework for solving exactly the problems I faced. While this obviously was no great success and was written
