Add IsNitradoDown to projects

--- a/projects.html
+++ b/projects.html
@@ -206,6 +206,18 @@
                         </span>
                     </span>
                     <span class="page-row-item">
+                        <span class="item-year">2011 &bull;</span> IsNitradoDown
+                        <span class="page-row-desc desc-spaced">
+                            <span class="tag tag-nok">defunct</span>
+                            <span class="link"><a href="http://isnitradodown.net"><i>&#xe805;</i></a></span>
+                            An online status site for nitrado.net <br />
+                            Originally started as a convenience tool for users to monitor the status of their minecraft server, with me becoming
+                            part of the Nitrado team, the site was extended to cover most of the services active at the time. The site has not
+                            been updated since I left the team due to a lack of new endpoint information and the hoster has since moved on to
+                            providing their own status site on a third-party service.
+                        </span>
+                    </span>
+                    <span class="page-row-item">
                         <span class="item-year">2009 &bull;</span> Hello World!
                         <span class="page-row-desc desc-spaced">
                             Everyone's gotta start somewhere, eh?
