Fix back to home link

--- a/projects.html
+++ b/projects.html
@@ -23,12 +23,12 @@
     <div class="page-details instant-details">
         <div>
             <h2 class="page-row-title">
-                <span class="row-title-pull"><a href="/">Home</a></span>
                 My <span class="page-i">side</span> projects
             </h2>
             <div class="page-split">
                 <div class="page-row">
                     <span class="page-row-desc inital-desc">
+                        <a href="/">&laquo; Back to Home</a><br /><br />
                         Although the page title indicates that this is a list of side projects,
                         it in fact is a list of all of my notable projects, including the picks
                         presented on the home page. I attempted to hint towards this by making
