Fix typos and wordings in project list

--- a/projects.html
+++ b/projects.html
@@ -54,9 +54,9 @@
                             Arduino Sketch for creating an all-in-one IR and computer remote.<br />
                             Because handling remotes
                             for multiple devices is laborious and retail all-in-one remotes are ugly bricks, this aims
-                            to solve the problem in a more creative way. An arduino with IR sender- and receiver is used
+                            to solve the problem in a more creative way. An Arduino with IR sender- and receiver is used
                             to translate signals from one, small remote into IR signals expected by various devices.
-                            Additionally, since the device used is a 32U4 based device, its keyboard emulation capabilites
+                            Additionally, since the device used is a 32U4 based device, its keyboard emulation capabilities 
                             are used to implement general remote control functionality for the connected computer.
                         </span>
                     </span>
@@ -66,11 +66,11 @@
                             <span class="tag tag-ok">finished</span>
                             <span class="link"><a href="https://github.com/cybrox/wroomba"><i>&#xf113;</i></a></span>
                             A convenience project for scheduling on cheap Roombas.<br />
-                            Born from the research for finding a WiFi and Bluetooth capable development board. The ESP32
+                            A side-project born from researching WiFi and Bluetooth capable development boards. The ESP32
                             running FreeRTOS has proven to be one of the best devices out there for tinkering low-level network
                             connected applications. Wroomba uses Roomba's Open Interface (ROI) for interfacing with Roomba cleaning
                             robots and exposing a simple HTTP API for starting cleaning. The software is considered finished as is,
-                            since it does it's only job - automatic cleaning - very well. However, there's still a broken Roomba
+                            since it does its only job - automatic cleaning - very well. However, there's still a broken Roomba
                             around that could need some additional tinkering.
                         </span>
                     </span>
@@ -97,7 +97,7 @@
                             This was my first attempt of writing a package for the hex package manager and generally one of
                             my very first actual Elixir projects. The current implementation, while completely untested, has
                             few enough moving parts to probably not break instantly. However, it does stay a learning experience
-                            and not a stable software.
+                            and is far from being a stable software.
                         </span>
                     </span>
                     <span class="page-row-item">
@@ -121,7 +121,7 @@
                             Using pretty solid shell- and ingame hook based tooling, this mod collected item and building information
                             from all mods in order to create templates for sorting them in proper categories. Ultimately, while the
                             mod did find some success, the effort of sorting the ever-growing modbase and the comparably low adaption
-                            lead to it not being developed any further. Last time I checked, the mess without it is still horrible.
+                            led to it not being developed any further. Last time I checked, the mess without it is still horrible.
                             If nothing else, this sure was a huge LUA and Bash learning experience!
                         </span>
                     </span>
@@ -130,11 +130,11 @@
                         <span class="page-row-desc desc-spaced">
                             <span class="tag tag-nok">defunct</span>
                             <span class="link"><a href="https://github.com/cybrox/giftfox"><i>&#xf113;</i></a></span>
-                            A bot for winning steamgifts.com gifts without effort. <br />
+                            A bot for winning Steamgifts.com gifts without effort. <br />
                             Let's face it, botting on giveaway sites is not exactly the most holy move in the book. While other sites
-                            had harsh restrictions on it, though, steamgifts was rather liberal in handling botting. Giving away games
+                            had harsh restrictions on it, though, Steamgifts was rather liberal in handling botting. Giving away games
                             to rank up and then botting higher-level rewards seemed like a pretty fair trade. The project got eventually
-                            defunct because everyone using it, myself included, lost interest in winning random games.
+                            defunct because everyone using it - myself included - lost interest in winning random games.
                         </span>
                     </span>
                     <span class="page-row-item">
@@ -162,7 +162,7 @@
                             burned out on working on it.<br /><br />
                             I went into this mess of Ruby on Rails and hacky JS tooling, not knowing a single bit of either and left from
                             a textbook dockerized Ember/Rails application. While I can only take credit for a small portion of all of that,
-                            it is save to say that this was one of the most amazing projects I ever had the chance to work on. Still riding
+                            it is safe to say that this was one of the most amazing projects I ever had the chance to work on. Still riding
                             at the front of technological development, I wish the company that has grown out of this humble hobby project
                             nothing but the best.
                         </span>
@@ -190,7 +190,7 @@
                             it does just about everything wrong in being an actual production-ready database. - For a very good reason, though.
                             Back in the day, I was building lots of PHP tools, mostly for myself or internal purposes which required an easy
                             to set-up and easy to handle database without all the complexity of an actual database system. Thus, CrunchDB was born.
-                            A terribly inefficient file-based database without locks or syncs but just right for single-person applications.
+                            A terribly inefficient, file-based database without locks or syncs but just right for single-person applications.
                         </span>
                     </span>
                     <span class="page-row-item">
@@ -211,7 +211,7 @@
                             <span class="tag tag-nok">defunct</span>
                             <span class="link"><a href="http://isnitradodown.net"><i>&#xe805;</i></a></span>
                             An online status site for nitrado.net <br />
-                            Originally started as a convenience tool for users to monitor the status of their minecraft server, with me becoming
+                            Originally started as a convenience tool for users to monitor the status of their Minecraft servers, with me becoming
                             part of the Nitrado team, the site was extended to cover most of the services active at the time. The site has not
                             been updated since I left the team due to a lack of new endpoint information and the hoster has since moved on to
                             providing their own status site on a third-party service.
