Fix chrunchDB project state

--- a/projects.html
+++ b/projects.html
@@ -183,7 +183,7 @@
                     <span class="page-row-item">
                         <span class="item-year">2014 &bull;</span> CrunchDB
                         <span class="page-row-desc desc-spaced">
-                            <span class="tag tag-nok">defunct</span>
+                            <span class="tag tag-ok">finished</span>
                             <span class="link"><a href="https://github.com/cybrox/crunchdb"><i>&#xf113;</i></a></span>
                             JSON - file based database system written in PHP. <br />
                             While CrunchDB probably does a lot of things right in terms of conveniently querying and updating information,
